syntax = "proto3";

package common;

option go_package = "./proto";

// Common message types
message Empty {
}

message UUID {
    string id = 1;
}

message PaginationRequest {
    int32 page = 1;
    int32 limit = 2;
}

message PaginationResponse {
    int32 page = 1;
    int32 limit = 2;
    int32 total = 3;
    int32 totalPages = 4;
}

message StatusResponse {
    bool success = 1;
    string message = 2;
}

message Timestamp {
    string value = 1;
}
